--- a/.github/workflows/feature-fix-deployments.yml
+++ b/.github/workflows/feature-fix-deployments.yml
@@ -3,10 +3,9 @@ name: FEATURE_FIX_DEPLOYMENT
 
 on:
   pull_request_target:
-    branches: [ "sprint/**" ]
+    branches: ["sprint/**"]
 
 jobs:
-            
   # runs NPM build and uploads the files to a specific ephemeral deployment
   # path. This is determined from the branch name in the format
   # feature/<ticket-num>/<short-description> or bugfix/<ticket-num>/<short-description>
@@ -33,29 +32,25 @@ jobs:
           github.event.pull_request.merged_at == null || 
           github.event.pull_request.closed_at == null
         run: |
-         BRANCH_NAME=${{ github.event.pull_request.head.ref }}
-         ID=$(echo 'cee-money' | cut -d '_' -f1)
-         FEATURE_NAME=$(echo ${BRANCH_NAME} | cut -d '/' -f3)
-         EPHEMERAL_DEPLOYMENT_NAME="ephemeral/${ID}/${FEATURE_NAME}"
-         DEPLOYMENT_URL="https://abc.com/${EPHEMERAL_DEPLOYMENT_NAME}"
-         echo ::set-output name=ephemeral_deployment_name::${EPHEMERAL_DEPLOYMENT_NAME}
-         echo ::set-output name=short_ref::${BRANCH_NAME}
-         echo ::set-output name=pr_author::${ID}
-         echo ::set-output name=deployment_url::${DEPLOYMENT_URL}
-      
+          BRANCH_NAME=${{ github.event.pull_request.head.ref }}
+          ID=$(echo 'cee-money' | cut -d '_' -f1)
+          FEATURE_NAME=$(echo ${BRANCH_NAME} | cut -d '/' -f3)
+          EPHEMERAL_DEPLOYMENT_NAME="ephemeral/${ID}/${FEATURE_NAME}"
+          DEPLOYMENT_URL="https://abc.com/${EPHEMERAL_DEPLOYMENT_NAME}"
+          echo ::set-output name=ephemeral_deployment_name::${EPHEMERAL_DEPLOYMENT_NAME}
+          echo ::set-output name=short_ref::${BRANCH_NAME}
+          echo ::set-output name=pr_author::${ID}
+          echo ::set-output name=deployment_url::${DEPLOYMENT_URL}
+
       - name: Check if head branch was deleted
         id: branch
         env:
           URL: ${{ github.server_url }}/${{ github.repository }}/branches/${{ steps.vars.outputs.short_ref }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          curl \
-            -L -w "%{http_code} %{url_effective}\\n"
-            -H "Accept: application/vnd.github+json" \
-            -H "Authorization: token $GITHUB_TOKEN" \
-            $URL
-            STATUS=$(echo $PATCH | tail -n 1)
-            echo "branch_active=${STATUS}" >> $GITHUB_OUTPUT
+          RESPONSE=$(curl --silent --write-out "HTTPSTATUS:%{http_code}" $URL -H "Accept: application/vnd.github+json" -H "Authorization: token $GITHUB_TOKEN" \)
+          STATUS=$(echo $HTTP_RESPONSE | tr -d '\n' | sed -e 's/.*HTTPSTATUS://')
+          echo "branch_active=${STATUS}" >> $GITHUB_OUTPUT
 
       - name: Comment deployment env URL on PR
         if: |
