--- a/.github/workflows/feature-fix-deployments.yml
+++ b/.github/workflows/feature-fix-deployments.yml
@@ -52,13 +52,12 @@ jobs:
           echo "branch_active=${STATUS}" >> $GITHUB_OUTPUT
 
       - name: Comment deployment env URL on PR
-        if: |
-          success() && 
-          steps.outputs.branch.branch_active == 200
+        if: ${{ success() }} 
         env:
           URL: ${{ github.event.pull_request.comments_url }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          STATUS=${{ steps.outputs.branch.branch_active }}
           curl \
             -X POST \
             $URL \
