--- a/.github/workflows/feature-fix-deployments.yml
+++ b/.github/workflows/feature-fix-deployments.yml
@@ -48,7 +48,8 @@ jobs:
       - name: Check if head branch was deleted
         id: branch_active
         run: |
-         BRANCH_ACTIVE=$(echo git ls-remote --heads 2>/dev/null|awk -F 'refs/heads/' '{print $2}'|grep -x "${{ steps.vars.outputs.short_ref }}"|wc -l)
+         FULL_NAME=${{ github.event.pull_request.head.ref }}
+         BRANCH_ACTIVE=$(echo git ls-remote --heads 2>/dev/null|awk -F 'refs/heads/' '{print $2}'|grep -x "${FULL_NAME}"|wc -l)
          echo "branch_active=${BRANCH_ACTIVE}" >> $GITHUB_OUTPUT
 
       - name: Comment deployment env URL on PR
