--- a/.github/workflows/feature-fix-deployments.yml
+++ b/.github/workflows/feature-fix-deployments.yml
@@ -48,8 +48,9 @@ jobs:
       - name: Check if head branch was deleted
         id: branch_active
         run: |
+         git fetch origin
          FULL_NAME=${{ github.event.pull_request.head.ref }}
-         BRANCH_ACTIVE=$(echo git ls-remote --heads 2>/dev/null|awk -F 'refs/heads/' '{print $2}'|grep -x "${FULL_NAME}"|wc -l)
+         BRANCH_ACTIVE=$(echo git branch -r --contains ${FULL_NAME})
          echo "branch_active=${BRANCH_ACTIVE}" >> $GITHUB_OUTPUT
 
       - name: Comment deployment env URL on PR
