--- a/.github/workflows/feature-fix-deployments.yml
+++ b/.github/workflows/feature-fix-deployments.yml
@@ -28,9 +28,6 @@ jobs:
 
       - name: Set Variables from Github
         id: vars
-        if: |
-          github.event.pull_request.merged_at == null || 
-          github.event.pull_request.closed_at == null
         run: |
           BRANCH_NAME=${{ github.event.pull_request.head.ref }}
           ID=$(echo 'cee-money' | cut -d '_' -f1)
@@ -50,7 +47,7 @@ jobs:
         run: |
          git fetch origin
          FULL_NAME=${{ github.event.pull_request.head.ref }}
-         BRANCH_ACTIVE=$(echo git ls-remote --heads 2>/dev/null|awk -F 'refs/heads/' '{print $2}'|grep -x ${FULL_NAME}|wc -l)
+         BRANCH_ACTIVE=$(echo git ls-remote --heads 2>/dev/null|awk -F 'refs/heads/' '{print $2}'|grep -x 'feature/ABC-123/this-is-the-feature'|wc -l)
          echo "branch_active=${BRANCH_ACTIVE}" >> $GITHUB_OUTPUT
 
       - name: Comment deployment env URL on PR
