--- a/.github/workflows/feature-fix-deployments.yml
+++ b/.github/workflows/feature-fix-deployments.yml
@@ -47,7 +47,7 @@ jobs:
         run: |
          git fetch origin
          FULL_NAME=${{ github.event.pull_request.head.ref }}
-         BRANCH_ACTIVE=$(echo git ls-remote --heads 2>/dev/null|awk -F 'refs/heads/' '{print $2}'|grep -x 'feature/ABC-123/this-is-the-feature'|wc -l)
+         BRANCH_ACTIVE=git ls-remote --heads 2>/dev/null|awk -F 'refs/heads/' '{print $2}'|grep -x 'feature/ABC-123/this-is-the-feature'|wc -l
          echo "branch_active=${BRANCH_ACTIVE}" >> $GITHUB_OUTPUT
 
       - name: Comment deployment env URL on PR
