--- a/.github/workflows/feature-fix-deployments.yml
+++ b/.github/workflows/feature-fix-deployments.yml
@@ -41,6 +41,8 @@ jobs:
 
       - name: Checkout to repository
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Check if head branch was deleted
         id: branch_active
