--- a/.github/workflows/feature-fix-deployments.yml
+++ b/.github/workflows/feature-fix-deployments.yml
@@ -50,6 +50,7 @@ jobs:
           FULL_NAME=${{ github.event.pull_request.head.ref }}
           BRANCH_ACTIVE=$(echo git ls-remote --heads 2>/dev/null|awk -F 'refs/heads/' '{print $2}'|grep -x '${FULL_NAME}' |wc -l)
           echo "branch_active=${BRANCH_ACTIVE}" >> $GITHUB_OUTPUT
+          echo "${BRNACH_ACTIVE}"
 
       - name: Comment deployment env URL on PR
         if: |
