--- a/.github/workflows/feature-fix-deployments.yml
+++ b/.github/workflows/feature-fix-deployments.yml
@@ -50,8 +50,10 @@ jobs:
           FULL_NAME=${{ github.event.pull_request.head.ref }}
           BRANCH_ACTIVE=$(echo git ls-remote --heads 2>/dev/null|awk -F 'refs/heads/' '{print $2}'|grep -x '${FULL_NAME}' |wc -l)
           echo "branch_active=${BRANCH_ACTIVE}" >> $GITHUB_OUTPUT
-          echo "${BRNACH_ACTIVE}"
-
+      
+      - name: Debug
+        run: echo ${{ steps.outputs.branch_active.branch_active }} | sed 's/./& /g' 
+      
       - name: Comment deployment env URL on PR
         if: |
           success() &&
