--- a/.github/workflows/feature-fix-deployments.yml
+++ b/.github/workflows/feature-fix-deployments.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Set Variables from Github
         id: vars
         run: |
-          BRANCH_NAME='feature/ABC-123/this-is-the-feature'
+          BRANCH_NAME=main
           ID=$(echo 'cee-money' | cut -d '_' -f1)
           FEATURE_NAME=$(echo ${BRANCH_NAME} | cut -d '/' -f3)
           EPHEMERAL_DEPLOYMENT_NAME="ephemeral/${ID}/${FEATURE_NAME}"
@@ -49,8 +49,8 @@ jobs:
         run: |
           git fetch --all
           git pull --all
-          FULL_NAME='feature/ABC-123/this-is-the-feature'
-          BRANCH_ACTIVE=$(echo git ls-remote --heads 2>/dev/null|awk -F 'refs/heads/' '{print $2}'|grep -x 'feature/ABC-123/this-is-the-feature' |wc -l)
+          FULL_NAME=main
+          BRANCH_ACTIVE=$(echo git ls-remote --heads 2>/dev/null|awk -F 'refs/heads/' '{print $2}'|grep -x 'main' |wc -l)
           echo "branch_active=${BRANCH_ACTIVE}" >> $GITHUB_OUTPUT
       
       - name: Debug
