--- a/.github/workflows/feature-fix-deployments.yml
+++ b/.github/workflows/feature-fix-deployments.yml
@@ -54,7 +54,7 @@ jobs:
           echo "branch_active=${BRANCH_ACTIVE}" >> $GITHUB_OUTPUT
       
       - name: Debug
-        run: echo ${{ steps.outputs.branch_active.branch_active }} | sed 's/./& /g' 
+        run: $(echo ${{ steps.outputs.branch_active.branch_active }} | sed 's/./& /g')
       
       - name: Comment deployment env URL on PR
         if: |
